# MD-analysis

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  temp.md
context4agent/: README.md  user_level.md
context4agent/architecture/: README.md
context4agent/requirements/: DESIGN.md  README.md  TIreconstruction.md  fp_block_average_refactor.md  long_term.md  short_term.md  tech_debt_audit.md  ti_cli_design.md
context4agent/temp/: 2026-03-06_baderanalysis_aligned_opposed_rename_prompt.md  README.md  cif2poscar.py  cif2xyz.py  slowgrowth_parser_progress.md  traj2cif.py
data_example/bader_work_dir/: CHG  CHGCAR  CONTCAR  DOSCAR  EIGENVAL  INCAR  OSZICAR  OUTCAR  PCDAT  POSCAR  POTCAR  XDATCAR  cal.out  script.sh  stdout  time  vasprun.xml
data_example/potential/: cal.out  init.cif  init.xyz  md-1.ener  md-1.restart  md-1.restart.bak-1  md-1.restart.bak-2  md-1.restart.bak-3  md-1_1000.restart  md-1_1500.restart  (+45 more)
history/: README.md  user_level.md
md_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: CLI.py  __init__.py  main.py
temp/: analyze_potential.py  md-1.restart  plot_phi_z_planeavg_all_frames.py  problems.md  report.md  solution_1_shared_interface.md  solution_2_skip_unnecessary_compute.md  solution_3_package_rename.md  solution_4_conftest_dedup.md  solution_5_utils_api_cleanup.md  solution_6_narrow_except.md
test/: README.md  conftest.py
tutorial/: 01_quickstart.ipynb  02_numpy_matplotlib_ase.ipynb  03_input_data.ipynb  04_layer1_metal_detection.ipynb  05_layer1_water_analysis.ipynb  06_layer2_trajectory_analysis.ipynb
(+356 files in other folders)
