[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md-analysis"
version = "0.1.0"
description = "Lightweight analysis utilities for periodic metal-water interfaces"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "ase",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
