[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md-analysis"
version = "0.1.0"
description = "Lightweight analysis utilities for periodic metal-water interfaces"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "ase",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest"]
ti = ["scipy>=1.10"]

[project.scripts]
md-analysis = "md_analysis.cli:main"

[tool.setuptools.package-data]
"md_analysis.scripts.template" = ["*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["md_analysis*"]
